--- a/Falabella5/Venetian320x480.html
+++ b/Falabella5/Venetian320x480.html
@@ -2139,22 +2139,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i72 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 41px;
-        -ms-transform: translate(0, 0) translate(0px, 316px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 316px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 316px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 316px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 30px;
+        -ms-transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 275px; height: 47px;
-        -ms-transform: translate(0, 0) translate(22px, 349px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(22px, 349px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(22px, 349px) rotate(0deg);
-        transform: translate(0, 0) translate(22px, 349px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 252px; height: 63px;
+        -ms-transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
+        transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2302,17 +2302,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i72.shape.html:shape/html-->
 <div id="i72"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?</div>
+<div id="i7">Europa tiene mucho por ofrecerte</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.</div>
+<div id="i12">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/XeUgzQj.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/8bbzVNN.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/CrOq2WJ.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/BzrSHoy.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/O42Fdhm.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/hejrDDK.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2431,7 +2431,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2482,22 +2482,22 @@ name: Shape 2;
 /*#/#*//*#i72.i73.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?; customName: false;
+name: Europa tiene mucho por ofrecerte; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.; customName: false;
+name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: yJZJsTt.png; fileId: ; sourceTypeId: externalUrl;
+name: 8bbzVNN.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 83xCIhc.png; fileId: ; sourceTypeId: externalUrl;
+name: BzrSHoy.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: yBs9eL2.png; fileId: ; sourceTypeId: externalUrl;
+name: hejrDDK.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
