--- a/Falabella5/Venetian300x600.html
+++ b/Falabella5/Venetian300x600.html
@@ -2143,13 +2143,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(8px, 310px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
-        transform: translate(0, 0) translate(19px, 354px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(19px, 349px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(19px, 349px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(19px, 349px) rotate(0deg);
+        transform: translate(0, 0) translate(19px, 349px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2288,17 +2288,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?</div>
+<div id="i7">Europa tiene mucho por ofrecerte</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.</div>
+<div id="i12">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/6IF31Xc.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/m3YTw9A.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/HeTkD8P.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/hejrDDK.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/O42Fdhm.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/BQktMEG.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
@@ -2459,22 +2459,22 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?; customName: false;
+name: Europa tiene mucho por ofrecerte; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.; customName: false;
+name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: yBs9eL2.png; fileId: ; sourceTypeId: externalUrl;
+name: m3YTw9A.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: ba4TNP5.png; fileId: ; sourceTypeId: externalUrl;
+name: hejrDDK.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: cIfd9U5.png; fileId: ; sourceTypeId: externalUrl;
+name: BQktMEG.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
