--- a/Falabella5/Cube.html
+++ b/Falabella5/Cube.html
@@ -659,20 +659,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i414.text.css:text/base/css*/
 #i414 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i414.i415.positioning.css:positioning/base/css.2*/
-#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 40px;
-        -ms-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 17px;
+        -ms-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
 }
 /*#/#*//*#i4.i458.text.css:text/base/css*/
 #i458 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i458.i459.positioning.css:positioning/base/css.2*/
-#i458 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 56px;
-        -ms-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-        transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
+#i458 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 56px;
+        -ms-transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+        transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -723,23 +723,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i472.text.css:text/base/css*/
-#i472 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i472.i473.positioning.css:positioning/base/css.2*/
-#i472 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 56px;
-        -ms-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-        transform: translate(0, 0) translate(17px, 192px) rotate(0deg);
-}
 /*#/#*//*#i5.i474.text.css:text/base/css*/
-#i474 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i474 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i474.i475.positioning.css:positioning/base/css.2*/
-#i474 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 40px;
-        -ms-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 152px) rotate(0deg);
+#i474 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 56px;
+        -ms-transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+        transform: translate(0, 0) translate(22px, 173px) rotate(0deg);
+}
+/*#/#*//*#i5.i472.text.css:text/base/css*/
+#i472 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i472.i473.positioning.css:positioning/base/css.2*/
+#i472 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 17px;
+        -ms-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
 }
 /*#/#*//*#i5.i428.image.css:image/base/css*/
 #i428 { opacity: 1; }
@@ -820,11 +820,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i466.image.css:image/base/css*/
 #i466 { opacity: 1; }
 /*#/#*//*#i466.i467.positioning.css:positioning/base/css.2*/
-#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 155px; height: 43px;
-        -ms-transform: translate(0, 0) translate(73px, 101px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(73px, 101px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(73px, 101px) rotate(0deg);
-        transform: translate(0, 0) translate(73px, 101px) rotate(0deg);
+#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 170px; height: 48px;
+        -ms-transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
+        transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
 }
 /*#/#*//*#i6.i406.image.css:image/base/css*/
 #i406 { opacity: 1; }
@@ -905,13 +905,13 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/fKfbKDl.png"/>
+<img id="i130" src="https://i.imgur.com/MUt6X6J.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i4.i414.text.html:text/html-->
-<div id="i414">¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?</div>
+<div id="i414">Europa tiene mucho por ofrecerte</div>
 <!--#/#--><!--#i4.i458.text.html:text/html-->
-<div id="i458">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.</div>
+<div id="i458">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -926,14 +926,14 @@ url('fonts/') format('svg');
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i472.text.html:text/html-->
-<div id="i472">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.</div>
 <!--#/#--><!--#i5.i474.text.html:text/html-->
-<div id="i474">¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?</div>
+<div id="i474">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.</div>
+<!--#/#--><!--#i5.i472.text.html:text/html-->
+<div id="i472">Europa tiene mucho por ofrecerte</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/0t357XL.png"/>
+<img id="i58" src="https://i.imgur.com/L9Ni4bn.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
 <div id="i434"></div>
 <!--#/#--><!--#i5.i424.image.html:image/html-->
@@ -951,7 +951,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/0caj6mK.png"/>
 <!--#/#--><!--#i6.i466.image.html:image/html-->
-<img id="i466" src="https://i.imgur.com/66ty0sM.png"/>
+<img id="i466" src="https://i.imgur.com/8ueWCdQ.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/Dcokx8V.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -1281,11 +1281,11 @@ customName: 1;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i414.text.meta:text/meta*/
-name: ¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?; customName: false;
+name: Europa tiene mucho por ofrecerte; customName: false;
 /*#/#*//*#i414.i415.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i458.text.meta:text/meta*/
-name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.; customName: false;
+name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.; customName: false;
 /*#/#*//*#i458.i459.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
@@ -1313,13 +1313,13 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i472.text.meta:text/meta*/
-name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para llevarte a Europa.; customName: false;
-/*#/#*//*#i472.i473.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i474.text.meta:text/meta*/
-name: ¿Qué tal disfrutar de la elegancia y realeza de Inglaterra?; customName: false;
+name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.; customName: false;
 /*#/#*//*#i474.i475.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i472.text.meta:text/meta*/
+name: Europa tiene mucho por ofrecerte; customName: false;
+/*#/#*//*#i472.i473.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i428.image.meta:image/meta*/
 name: LOGO copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
