--- a/Mustela4/Cube.html
+++ b/Mustela4/Cube.html
@@ -943,7 +943,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/vnEaq3F.png"/>
 <!--#/#--><!--#i4.i524.text.html:text/html-->
-<div id="i524">Superhéroe de la piel NORMAL</div>
+<div id="i524">Superhéroe de la piel NORMAL.</div>
 <!--#/#--><!--#i4.i522.text.html:text/html-->
 <div id="i522">Cuate, el Aguacate</div>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -967,7 +967,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i472.text.html:text/html-->
 <div id="i472">Imanol, el Girasol</div>
 <!--#/#--><!--#i5.i520.text.html:text/html-->
-<div id="i520">Superhéroe de la piel ATÓPICA</div>
+<div id="i520">Superhéroe de la piel ATÓPICA.</div>
 <!--#/#--><!--#i5.i506.image.html:image/html-->
 <img id="i506" src="https://i.imgur.com/fXufijj.jpg"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
@@ -989,7 +989,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i528.text.html:text/html-->
-<div id="i528">Superhéroe de la piel SECA</div>
+<div id="i528">Superhéroe de la piel SECA.</div>
 <!--#/#--><!--#i6.i526.text.html:text/html-->
 <div id="i526">Rita, la Abejita</div>
 <!--#/#--><!--#i6.i508.image.html:image/html-->
