--- a/PhilipsMorris formulario/Fomulario_2 caras_02.html
+++ b/PhilipsMorris formulario/Fomulario_2 caras_02.html
@@ -495,12 +495,6 @@
 
 
 
-
-
-
-
-
-
         <div class="details" style="background-color: #f4f4f4">
             <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
             <form id="question" class="FR form">
@@ -511,10 +505,10 @@
                     <!--<h2>CONTÁCTANOS</h2>-->
 
 
-                    <p style="width: 100%; text-align: left; margin-bottom: -20px;"><input id="namee" placeholder="¿Cómo te gusta que te digan?*" name="nickname" type="text" required="text"></p>
-                    <p style="width: 100%; text-align: left; margin-bottom: -20px;"><input id="correo" placeholder="¿Cuál es tu correo electrónico?*" name="email" type="email" required="@"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: -25px;"><input id="namee" placeholder="¿Cómo te gusta que te digan?*" name="nickname" type="text" required="text"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: -25px;"><input id="correo" placeholder="¿Cuál es tu correo electrónico?*" name="email" type="email" required="@"></p>
 
-                    <p style="width: 100%; text-align: left; margin-bottom: -20px;"><input id="celular" placeholder="¿Cuál es tu número celular? (10 dígitos)*" pattern="[0-9]{10}" name="phone" type="0" required="number"></p>
+                    <p style="width: 100%; text-align: left; margin-bottom: -25px;"><input id="celular" placeholder="¿Cuál es tu número celular? (10 dígitos)*" pattern="[0-9]{10}" name="phone" type="0" required="number"></p>
 
                      <p style="width: 100%; text-align: left; margin-bottom: -20px;">
                         <select id="sexo" name="man_woman" type="text">
@@ -525,9 +519,16 @@
                         </select>
                     </p>
 
-                    <p style="width: 100%; text-align: left; margin-bottom: -20px;">
-                        <select id="fuma" name="yes_no" type="text" required="text">
+                    <p style="width: 100%; text-align: left; margin-bottom: -25px;">
+                        <select id="fuma" name="smoke" type="text" required="text">
                             <option value="" disabled selected>¿Eres fumador?</option>
+                            <option>Sí</option>
+                            <option>NO</option>
+                        </select>
+
+                        <p style="width: 100%; text-align: left; margin-bottom: -25px;">
+                        <select id="edad" name="age" type="text" required="text">
+                            <option value="" disabled selected>¿Eres mayor de edad?</option>
                             <option>Sí</option>
                             <option>NO</option>
                         </select>
@@ -659,7 +660,8 @@
                     bv2: btoa(responseData.email.norm_to_ascii().crypt_sym()),
                     bv3: btoa(responseData.phone.norm_to_ascii().crypt_sym()),
                     bv4: btoa(responseData.man_woman.norm_to_ascii().crypt_sym()),
-                    bv5: btoa(responseData.yes_no.norm_to_ascii().crypt_sym()),
+                    bv5: btoa(responseData.smoke.norm_to_ascii().crypt_sym()),
+                    bv6: btoa(responseData.age.norm_to_ascii().crypt_sym()),
 
                 };
 
