--- a/Mustela4/Cube.html
+++ b/Mustela4/Cube.html
@@ -668,11 +668,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 88px; height: 24px;
-        -ms-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 89px; height: 28px;
+        -ms-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
 }
 /*#/#*//*#i4.i476.image.css:image/base/css*/
 #i476 { opacity: 1; }
@@ -750,14 +750,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(4px, 196px) rotate(0deg);
         transform: translate(0, 0) translate(4px, 196px) rotate(0deg);
 }
-/*#/#*//*#i5.i506.image.css:image/base/css*/
-#i506 { opacity: 1; }
-/*#/#*//*#i506.i507.positioning.css:positioning/base/css.2*/
-#i506 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 88px; height: 24px;
-        -ms-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
+/*#/#*//*#i5.i538.image.css:image/base/css*/
+#i538 { opacity: 1; }
+/*#/#*//*#i538.i539.positioning.css:positioning/base/css.2*/
+#i538 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 89px; height: 28px;
+        -ms-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -844,15 +844,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(4px, 176px) rotate(0deg);
         transform: translate(0, 0) translate(4px, 176px) rotate(0deg);
 }
-/*#/#*//*#i6.i508.image.css:image/base/css*/
-#i508 { opacity: 1; }
-/*#/#*//*#i508.i509.positioning.css:positioning/base/css.2*/
-#i508 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 88px; height: 24px;
-        -ms-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(206px, 221px) rotate(0deg);
-}
 /*#/#*//*#i6.i518.image.css:image/base/css*/
 #i518 { opacity: 1; }
 /*#/#*//*#i518.i519.positioning.css:positioning/base/css.1*/
@@ -861,6 +852,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i6.i540.image.css:image/base/css*/
+#i540 { opacity: 1; }
+/*#/#*//*#i540.i541.positioning.css:positioning/base/css.2*/
+#i540 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 89px; height: 28px;
+        -ms-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(207px, 218px) rotate(0deg);
 }
 /*#/#*//*#i6.i504.image.css:image/base/css*/
 #i504 { opacity: 1; }
@@ -947,7 +947,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i522.text.html:text/html-->
 <div id="i522">Cuate, el Aguacate</div>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/fXufijj.jpg"/>
+<img id="i181" src="https://i.imgur.com/hbM9owO.png"/>
 <!--#/#--><!--#i4.i476.image.html:image/html-->
 <img id="i476" src="https://i.imgur.com/nKF4Tnb.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -968,8 +968,8 @@ url('fonts/') format('svg');
 <div id="i472">Imanol, el Girasol</div>
 <!--#/#--><!--#i5.i520.text.html:text/html-->
 <div id="i520">Superhéroe de la piel ATÓPICA.</div>
-<!--#/#--><!--#i5.i506.image.html:image/html-->
-<img id="i506" src="https://i.imgur.com/fXufijj.jpg"/>
+<!--#/#--><!--#i5.i538.image.html:image/html-->
+<img id="i538" src="https://i.imgur.com/hbM9owO.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/XoC4QQb.png"/>
 <!--#/#--><!--#i5.i478.image.html:image/html-->
@@ -992,10 +992,10 @@ url('fonts/') format('svg');
 <div id="i528">Superhéroe de la piel SECA.</div>
 <!--#/#--><!--#i6.i526.text.html:text/html-->
 <div id="i526">Rita, la Abejita</div>
-<!--#/#--><!--#i6.i508.image.html:image/html-->
-<img id="i508" src="https://i.imgur.com/fXufijj.jpg"/>
 <!--#/#--><!--#i6.i518.image.html:image/html-->
 <img id="i518" src="https://i.imgur.com/lHBNBHG.png"/>
+<!--#/#--><!--#i6.i540.image.html:image/html-->
+<img id="i540" src="https://i.imgur.com/hbM9owO.png"/>
 <!--#/#--><!--#i6.i504.image.html:image/html-->
 <img id="i504" src="https://i.imgur.com/nKF4Tnb.png"/>
 <!--#/#--><!--#i6.i510.shape.html:shape/html-->
@@ -1117,7 +1117,7 @@ var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
     /*#i294.i295.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.mustela.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.mustela.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1133,10 +1133,10 @@ if ('click' === 'click') {
 bmShow('i472');
 /*#/#*//*#i520.i521.positioning.js:positioning/base/js.2*/
 bmShow('i520');
-/*#/#*//*#i5.i506.image.js:image/base/js*/
+/*#/#*//*#i5.i538.image.js:image/base/js*/
 
-/*#/#*//*#i506.i507.positioning.js:positioning/base/js.2*/
-bmShow('i506');
+/*#/#*//*#i538.i539.positioning.js:positioning/base/js.2*/
+bmShow('i538');
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i478.image.js:image/base/js*/
@@ -1166,7 +1166,7 @@ var el = document.getElementById('i480');
 
 el.addEventListener('click', function(e){
     /*#i482.i483.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.mustela.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.mustela.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1216,12 +1216,12 @@ if ('click' === 'click') {
 bmShow('i528');
 /*#/#*//*#i526.i527.positioning.js:positioning/base/js.2*/
 bmShow('i526');
-/*#/#*//*#i6.i508.image.js:image/base/js*/
-
-/*#/#*//*#i508.i509.positioning.js:positioning/base/js.2*/
-bmShow('i508');
 /*#/#*//*#i6.i518.image.js:image/base/js*/
 
+/*#/#*//*#i6.i540.image.js:image/base/js*/
+
+/*#/#*//*#i540.i541.positioning.js:positioning/base/js.2*/
+bmShow('i540');
 /*#/#*//*#i6.i504.image.js:image/base/js*/
 
 /*#/#*//*#i504.i505.positioning.js:positioning/base/js.2*/
@@ -1283,7 +1283,7 @@ var el = document.getElementById('i534');
 
 el.addEventListener('click', function(e){
     /*#i536.i537.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.mustela.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.mustela.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1332,7 +1332,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i524.text.meta:text/meta*/
-name: Superhéroe de la piel NORMAL; customName: false;
+name: Superhéroe de la piel NORMAL.; customName: false;
 /*#/#*//*#i524.i525.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i522.text.meta:text/meta*/
@@ -1379,13 +1379,13 @@ name: Imanol, el Girasol; customName: false;
 /*#/#*//*#i472.i473.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i520.text.meta:text/meta*/
-name: Superhéroe de la piel ATÓPICA; customName: false;
+name: Superhéroe de la piel ATÓPICA.; customName: false;
 /*#/#*//*#i520.i521.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i506.image.meta:image/meta*/
+/*#/#*//*#i5.i538.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i506.i507.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i538.i539.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1423,22 +1423,22 @@ name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i528.text.meta:text/meta*/
-name: Superhéroe de la piel SECA; customName: false;
+name: Superhéroe de la piel SECA.; customName: false;
 /*#/#*//*#i528.i529.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i526.text.meta:text/meta*/
 name: Rita, la Abejita; customName: false;
 /*#/#*//*#i526.i527.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i508.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i508.i509.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i518.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i518.i519.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i540.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i540.i541.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i504.image.meta:image/meta*/
 name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
