--- a/Mustela4/Venetian.html
+++ b/Mustela4/Venetian.html
@@ -2152,11 +2152,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 104px; height: 28px;
-        -ms-transform: translate(0, 0) translate(207px, 444px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(207px, 444px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(207px, 444px) rotate(0deg);
-        transform: translate(0, 0) translate(207px, 444px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 95px; height: 30px;
+        -ms-transform: translate(0, 0) translate(219px, 443px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(219px, 443px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(219px, 443px) rotate(0deg);
+        transform: translate(0, 0) translate(219px, 443px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2308,7 +2308,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/fXufijj.jpg"/>
+<img id="i16" src="https://i.imgur.com/hbM9owO.png"/>
 <!--#/#--><!--#i93.image.html:image/html-->
 <img id="i93" src="https://i.imgur.com/nKF4Tnb.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
