--- a/Mustela4/ZoomExp300x600.html
+++ b/Mustela4/ZoomExp300x600.html
@@ -206,7 +206,7 @@ a {text-decoration: none;}
 
                  
                    </div>
-                     <div style=";height:5px;text-align:right ;margin-top:10px; margin-right: 10px;"> <img src="https://i.imgur.com/fXufijj.jpg" style="height:30px; text-decoration: none;">
+                     <div style=";height:5px;text-align:right ;margin-top:15px; margin-right: 10px;"> <img src="https://i.imgur.com/hbM9owO.png" style="height:30px; text-decoration: none;">
 
                                        
                    </div>
