--- a/Bosch/Venetian320x480.html
+++ b/Bosch/Venetian320x480.html
@@ -2135,18 +2135,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i42.image.css:image/base/css*/
 #i42 { opacity: 1; }
-/*#/#*//*#i72.shape.css:shape/base/css*/
-#i72 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 253px; height: 60px;
-        -ms-transform: translate(0, 0) translate(33px, 331px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(33px, 331px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(33px, 331px) rotate(0deg);
-        transform: translate(0, 0) translate(33px, 331px) rotate(0deg);
-}
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
     position: absolute;
@@ -2159,18 +2147,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 315px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 250px;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 117px; height: 41px;
-        -ms-transform: translate(0, 0) translate(195px, 377px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(195px, 377px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(195px, 377px) rotate(0deg);
-        transform: translate(0, 0) translate(195px, 377px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 104px; height: 49px;
+        -ms-transform: translate(0, 0) translate(207px, 17px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(207px, 17px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(207px, 17px) rotate(0deg);
+        transform: translate(0, 0) translate(207px, 17px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2231,18 +2219,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
-#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 267px;
-        -ms-transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
+#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 357px; height: 128px;
+        -ms-transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
 }
-/*#/#*//*#i72.i73.positioning.css:positioning/base/css.2*/
-#i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 6.874990463256836%;
-        -ms-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
+/*#/#*//*#i74.image.css:image/base/css*/
+#i74 { opacity: 1; }
+/*#/#*//*#i74.i75.positioning.css:positioning/base/css.2*/
+#i74 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 160px; height: 45px;
+        -ms-transform: translate(0, 0) translate(80px, 226px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(80px, 226px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(80px, 226px) rotate(0deg);
+        transform: translate(0, 0) translate(80px, 226px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
@@ -2255,6 +2245,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i76.image.css:image/base/css*/
+#i76 { opacity: 1; }
+/*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
+#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 223px; height: 89px;
+        -ms-transform: translate(0, 0) translate(16px, 266px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 266px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 266px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 266px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2262,11 +2261,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
-<!--#/#--><!--#i72.shape.html:shape/html-->
-<div id="i72"></div>
-<!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Descubre lo mejor de la tecnología alemana.</div>
+<img id="i42" src="https://i.imgur.com/X53wT3M.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2277,10 +2272,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i6" src="https://i.imgur.com/luzm1md.png"></dataimg>
 <!--#/#-->
 </div>
+<!--#/#--><!--#i74.image.html:image/html-->
+<img id="i74" src="https://i.imgur.com/UgmvexE.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/7EPaBwD.jpg"/>
+<img id="i16" src="https://i.imgur.com/jtB0fDO.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/kZThkuS.png"/>
+<!--#/#--><!--#i76.image.html:image/html-->
+<img id="i76" src="https://i.imgur.com/PJwROYm.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2289,10 +2288,6 @@ bmShow('i30');
 
 /*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
 bmShow('i42');
-/*#/#*//*#i72.i73.positioning.js:positioning/base/js.2*/
-bmShow('i72');
-/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
-bmShow('i7');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2337,6 +2332,10 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i74.image.js:image/base/js*/
+
+/*#/#*//*#i74.i75.positioning.js:positioning/base/js.2*/
+bmShow('i74');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2351,13 +2350,17 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.bosch-home.com/co/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/8dYT7n6WYeywMKMx5'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i76.image.js:image/base/js*/
+
+/*#/#*//*#i76.i77.positioning.js:positioning/base/js.2*/
+bmShow('i76');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2380,14 +2383,6 @@ name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i72.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i72.i73.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i7.text.meta:text/meta*/
-name: Descubre lo mejor de la tecnología alemana.; customName: false;
-/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2399,6 +2394,11 @@ name: mlqE2FY.png; fileId: ; sourceTypeId: externalUrl;
 name: luzm1md.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i74.image.meta:image/meta*/
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i74.i75.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -2408,5 +2408,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: MARCO - LINK; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i76.image.meta:image/meta*/
+name: PJwROYm.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i76.i77.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
