--- a/HEB form/formulario-def.html
+++ b/HEB form/formulario-def.html
@@ -130,7 +130,7 @@
     #question p input  {
 
     padding: 10px;
-    border: 1px solid #e22532;
+    border: 1px solid #181818;
     border-radius: 1px;
     margin-bottom: 10px;
     width: 100%;
@@ -615,7 +615,7 @@
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form id="question" class="FR form">
                     <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/2SFQQIR.png" style="height:400px; width: 300px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/6m6CGSe.png" style="height:400px; width: 300px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -15px;"></span>
 
    <!-- <span style="bottom:5px; text-align:center ; float:center; background-color: #e22532;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -3px; margin-bottom: -5px;"></span>
