--- a/HUAWEI P30/Venetian.html
+++ b/HUAWEI P30/Venetian.html
@@ -2318,7 +2318,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i115.image.html:image/html-->
 <img id="i115" src="https://i.imgur.com/zqpe6oI.png"/>
 <!--#/#--><!--#i119.text.html:text/html-->
-<div id="i119">Notificaciones Inteligentes para llevar el día y batería de larga duración, viaja sin límites.</div>
+<div id="i119">Notificaciones inteligentes para llevar el día y batería de larga duración, viaja sin límites.</div>
 <!--#/#--><!--#i117.text.html:text/html-->
 <div id="i117">HUAWEI WATCH GT KV</div>
 <!--#/#--><!--#i102.shape.html:shape/html-->
