--- a/Urban Spices/320x50.html
+++ b/Urban Spices/320x50.html
@@ -59,15 +59,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/apnW2KM.jpg)
+            background-image: url(https://i.imgur.com/gUfSnqD.png)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/cZl79tG.jpg)
+            background-image: url(https://i.imgur.com/dahB5qX.png)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/PvCnwgK.jpg)
+            background-image: url(https://i.imgur.com/yiMbnEA.png)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
@@ -261,7 +261,7 @@
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
       
 
-        <a href="https://goo.gl/maps/5MCxDPGUQw82" target="_blank">
+        <a href="https://goo.gl/maps/DYKGW7Uzf5wNpTag9" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
