--- a/Urban Spices/fade-small.html
+++ b/Urban Spices/fade-small.html
@@ -9,11 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel=stylesheet>
     <style>
 
-     @font-face {
-  font-family: 'BentonSans';
-  src: url('BentonSans.woff'); 
- 
-}
+  
         .fadesmall {
             margin: 0px
         }
@@ -40,7 +36,7 @@
             position: relative;
             overflow: hidden;
             color: #000;
-            font-family: BentonSans, sans-serif
+            font-family: Trebuchet MS, sans-serif
         }
 
         .fadesmall .bzm_wrapper.size_300x250 {
@@ -79,7 +75,7 @@
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/3wiIDFD.jpg)
+            background-image: url(https://i.imgur.com/8UtMP2S.gif)
         }
 
         .fadesmall .bg.cover-3 {
@@ -125,7 +121,7 @@
         .fadesmall .bzm_text_title {
             color: #000;
             width:95%;
-            font-size: 17px;
+            font-size: 13px;
         }
 
         .fadesmall .bzm_text_light {
@@ -231,7 +227,7 @@
             
             height:30px;
             margin-top:10px; 
-            margin-left:190px;
+            float:right;
 
         }
 
