--- a/Urban Spices/Venetian.html
+++ b/Urban Spices/Venetian.html
@@ -2319,7 +2319,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/JdVm18i.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/7SkUDzE.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/q5esMOf.png"></dataimg>
 <!--#/#--><!--#i2.i109.slice-image.html:slice-image/html.1-->
@@ -2477,7 +2477,7 @@ var el = document.getElementById('i112');
 
 el.addEventListener('click', function(e){
     /*#i120.i121.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/DYKGW7Uzf5wNpTag9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2526,7 +2526,7 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: JdVm18i.png; fileId: ; sourceTypeId: externalUrl;
+name: 7SkUDzE.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: q5esMOf.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i109.slice-image.meta:slice-image/meta.1*/
