--- a/Urban Spices/Venetian.html
+++ b/Urban Spices/Venetian.html
@@ -2337,7 +2337,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡Ponle más sushi a tu semana!</div>
 <!--#/#--><!--#i116.text.html:text/html-->
-<div id="i116">Ven y disfruta de nuestras prmociones semanales en nuestros platos y bebidas.</div>
+<div id="i116">Ven y disfruta de nuestras promociones semanales en nuestros  platos y bebidas.</div>
 <!--#/#--><!--#i107.image.html:image/html-->
 <img id="i107" src="https://i.imgur.com/PJYmZ7Q.png"/>
 <!--#/#--><!--#i103.shape.html:shape/html-->
