--- a/Urban Spices/fade-small.html
+++ b/Urban Spices/fade-small.html
@@ -121,7 +121,7 @@
         .fadesmall .bzm_text_title {
             color: #000;
             width:95%;
-            font-size: 13px;
+            font-size: 15px;
         }
 
         .fadesmall .bzm_text_light {
@@ -225,8 +225,8 @@
 
         .fadesmall #logo {
             
-            height:30px;
-            margin-top:10px; 
+            height:35px;
+            margin-top:5px; 
             float:right;
 
         }
@@ -238,7 +238,7 @@
             margin-left: 12px;
             display:inline;
             float:left;
-            margin-top:20px;
+            margin-top:15px;
             
         }
 
@@ -282,7 +282,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"> Prueba algo diferente el día de hoy: ven y disfruta de nuestras promociones.  </span>
+            <div class="bzm_text"> <span class="bzm_text_title"> Prueba algo diferente el día de hoy:<br> ven y disfruta de nuestras promociones.  </span>
                </div>
 
             <!-- LOGO -->
