--- a/Urban Spices/hover-text-big2.html
+++ b/Urban Spices/hover-text-big2.html
@@ -117,7 +117,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/5MCxDPGUQw82" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/U0uyOtp.gif"> </a></div>
+                <a href="https://goo.gl/maps/DYKGW7Uzf5wNpTag9" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/vaXNTQZ.png"> </a></div>
 
              
 
